# ksu

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml
src/: errors.rs  fd.rs  features.rs  info.rs  lib.rs  magic.rs  mark.rs  nuke.rs  safe.rs  sepolicy.rs  try_umount.rs
src/dynamic_manager/: mod.rs
src/resukisu/: errors.rs  magic.rs  mod.rs
