[package]
name = "ksu"
version = "0.1.1"
edition = "2024"
description = "A simple ksucalls library"
authors = ["Tools-cx-app"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tools-cx-app/ksu/"

[dependencies]
anyhow = "1.0.101"
bitflags = "2.10.0"
libc = "0.2.180"
linux-raw-sys = "0.12.1"
log = "0.4.29"
rustix = { version = "1.1.3", features = ["fs"] }
thiserror = "2.0.18"
