[package]
name = "ksu"
version = "0.2.0"
edition = "2024"
description = "A simple ksucalls library"
authors = ["Tools-cx-app"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tools-cx-app/ksu/"

[features]
dynamic-manager = []

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
libc = "0.2.183"
linux-raw-sys = "0.12.1"
log = "0.4.29"
rustix = { version = "1.1.4", features = ["fs"] }
thiserror = "2.0.18"
